# Online-topics_sentiment_analyzer

./: .gitignore  README.md  _test_nba.py  config.py  main.py  pyproject.toml  requirements.txt
crawler/: hupu_crawler.py  weibo_crawler.py
data/: cleaned_comments.json  word_freq.json
preprocess/: alias_resolver.py  cleaner.py  segmenter.py
sentiment/: analyzer.py
sentiment_analyzer/: TOOLS.md  _check_likes.py  _rerun.py  _test_bootstrap.py  _test_compile.py  config.py  main.py  requirements.txt
sentiment_analyzer/crawler/: __init__.py  hupu_crawler.py  weibo_crawler.py
sentiment_analyzer/data/: alias_dict.json  alias_dict_backup.json  cleaned_before_bootstrap.json  cleaned_comments.json  raw_comments.json  sentiment_results.json  stopwords.txt  word_freq.json
sentiment_analyzer/preprocess/: __init__.py  alias_resolver.py  cleaner.py  segmenter.py
sentiment_analyzer/sentiment/: __init__.py  analyzer.py
sentiment_analyzer/visualize/: pie_chart.py
tests/: test_alias_resolver.py  test_cleaner.py
visualize/: __init__.py  pie_chart.py
